chandeliers-lus/tests/compile_fail/ui/tc/when-on-const.stderr
error: expected `=`
 --> tests/compile_fail/ui/tc/when-on-const.rs:3:19
  |
3 |     const X : int when b = 0;
  |                   ^^^^
